# utilities

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  commitlint.config.js  pyproject.toml
.github/workflows/: codeql-analysis.yml
docs/: extensions_ckan_org.html  falabr_cgu_gov_br.html  index.html
scripts/: _techsignatures.py  ckan_extensions.py  dados_gov_br.py  en_wikipedia_org_wiki_List_of_file_formats.py  extensions.ckan.org.py  extensions_ckan_org.py  falabr.cgu.gov.br.py  falabr_cgu_gov_br.py  iana_org_assignments_media-types_media-types_xhtml.py
