[tool.poetry]
name = "utilities"
version = "0.1.0"
description = ""
authors = ["ellis ford <ellis.ford@datopian.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas-profiling = {extras = ["notebook"], version = "^3.1.0"}
pandas = "^1.4.1"
tqdm = "^4.63.0"
pdoc3 = "^0.10.0"

fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
